Slideshow concluded, and it's already responsive for major laptop resolutions. Minor bug, on models text's for very low resolutions (the model's text are too small). The queries to obtain the content of the slides were rectified.

--- a/static/general/css/slideshow_custom.css
+++ b/static/general/css/slideshow_custom.css
@@ -46,7 +46,7 @@
     background-color: white;
 }
 
-#awardImgBox{
+.awardImgBox{
     display: block;
     text-align: center;
     margin: 0 auto;
@@ -57,7 +57,7 @@
     font-size: 60px !important;
 }
 
-#awardImgBox > h1{
+.awardImgBox > h1{
     margin-top: 20px;
     font-size: 24px;
     font-weight: 600;
@@ -65,33 +65,76 @@
     color: #417690;
 }
 
-#textExploration{
+.textExploration{
     display: block;
     width: 80%;
     height: 100%;
     margin-top: 10vh;
-    margin-left: 7vw;
+    margin-left: 5vw;
 }
 
-.datasetsMostUsedPerUser{
+.datasetsMostUsedPerUser, .datasetsMostUsed, .modelsMostUsed{
     display: block;
     width: 100%;
     height: 100%;
     text-align: left;
 }
 
-.datasetsMostUsedPerUser > .fa-star:before{
-    display: inline-block;
+.datasetsMostUsedPerUser > .fa-star:before, .datasetsMostUsed > .fa-star:before, .modelsMostUsed> .fa-star:before{
+    display: inline;
     font-size: 30px !important;
     float: left;
     vertical-align: middle;
 }
 
-.datasetsMostUsedPerUser > p{
+.datasetsMostUsedPerUser > p, .datasetsMostUsed > p, .modelsMostUsed > p{
     display: inline-block;
     font-size: 30px;
     font-weight: 500;
     font-family: 'Consolas', 'Monaco', 'Bitstream Vera Sans Mono', monospace;
     vertical-align: middle;
     padding-left: 4vw;
+}
+
+.datasetsMostUsedPerUser > p, .datasetsMostUsed > p, .datasetsMostUsedPerUser > .fa-star:before, .datasetsMostUsed > .fa-star:before{
+    font-size: 2.2vw !important;
+}
+
+.modelsMostUsed > p, .modelsMostUsed> .fa-star:before{
+    font-size: 1.7vw !important;
+}
+
+/*solution to minor bug on loading slide content (delay on apply css)*/
+/*ref: https://github.com/kenwheeler/slick/issues/1511*/
+.slick-frame {
+    visibility: hidden;
+}
+.slick-frame.slick-initialized {
+    visibility: visible;
+}
+
+/*media queries*/
+@media (max-width: 1400px) {
+    #welcomeBox > h1{
+        font-size: 52px;
+    }
+}
+
+@media (max-width: 950px) {
+    #welcomeBox > h1{
+        font-size: 42px;
+    }
+}
+
+@media (max-width: 800px) {
+    #welcomeBox > h1{
+        font-size: 42px;
+    }
+}
+
+@media (max-width: 640px) {
+    #welcomeBox > h1{
+        font-size: 35px;
+        padding-left: 2vw;
+    }
 }
